--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "webpack-example",
   "devDependencies": {
     "css-loader": "^0.17.0",
+    "file-loader": "^0.8.4",
+    "html-loader": "^0.3.0",
     "style-loader": "^0.12.3",
+    "url-loader": "^0.5.6",
     "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1"
   },
   "scripts": {
-    "dev": "webpack-dev-server --display-error-details --progress --colors --content-base dist/",
+    "dev": "webpack-dev-server --display-error-details --progress --colors --hot --content-base dist/",
     "build": "webpack --display-error-details --progress",
     "optimize": "webpack --display-error-details --progress --optimize-minimize"
   }
